--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,3 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.link-underline {
+  color: #0d6efd !important;
+  text-decoration: underline !important;
+  font-weight: 500;
+}
